--- a/student_code/004_ips_sensor_fusion/ips_sensor_fusion/results_plotting.ipynb
+++ b/student_code/004_ips_sensor_fusion/ips_sensor_fusion/results_plotting.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'data/results/results_csv/kreuzmuster2.csv'\n",
+    "filename = 'data/results/results_csv/kreuzmuster2_high_proc_cov.csv'\n",
     "delimiter = ','\n",
     "\n",
     "#read csv file\n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'data/results/results_csv/kreuzmuster2.csv'\n",
+    "filename = 'data/results/results_csv/kreuzmuster2_high_proc_cov.csv'\n",
     "delimiter = ','\n",
     "\n",
     "csv_dataframe = pd.read_csv(filename, delimiter=delimiter)\n",
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'data/results/results_csv/double90_odom_drift.csv'\n",
+    "filename = 'data/results/results_csv/double90_4_odom_drift.csv'\n",
     "delimiter = ','\n",
     "\n",
     "csv_dataframe = pd.read_csv(filename, delimiter=delimiter)\n",
@@ -219,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
