added missing plot function

--- a/student_code/004_ips_sensor_fusion/ips_sensor_fusion/results_plotting.ipynb
+++ b/student_code/004_ips_sensor_fusion/ips_sensor_fusion/results_plotting.ipynb
@@ -208,7 +208,7 @@
     "    xaxis = xaxis - xaxis[0]\n",
     "\n",
     "    #seperate quaternion data\n",
-    "    yaw = csv_dataframe[selected_columns[selector][0]]\n",
+    "    yaw =    csv_dataframe[selected_columns[selector][0]]\n",
     "    quat_x = csv_dataframe[selected_columns[selector][1]]\n",
     "    quat_y = csv_dataframe[selected_columns[selector][2]]\n",
     "    quat_z = csv_dataframe[selected_columns[selector][3]]\n",
@@ -234,6 +234,70 @@
     "    ax.legend(['AMCL','Marvelmind','Odometrie'])\n",
     "    ax.grid(True)\n",
     "plt.show()               "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## display angle data for ekf performance visualization using double90 bag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "filename = 'data/results/results_csv/rotations4.csv'\n",
+    "delimiter = ','\n",
+    "\n",
+    "csv_dataframe = pd.read_csv(filename, delimiter=delimiter)\n",
+    "header = list(csv_dataframe.columns.values)\n",
+    "\n",
+    "#define columns to be extracted from csv dataframe\n",
+    "selected_columns = [[\"/amcl_pose/pose/pose/orientation/yaw_deg\",\"/amcl_pose/pose/pose/orientation/x\",\"/amcl_pose/pose/pose/orientation/y\",\"/amcl_pose/pose/pose/orientation/z\",\"/amcl_pose/pose/pose/orientation/w\"],\n",
+    "                    [\"/transformed_pos/pose/pose/orientation/yaw_deg\" ,\"/transformed_pos/pose/pose/orientation/x\",\"/transformed_pos/pose/pose/orientation/y\",\"/transformed_pos/pose/pose/orientation/z\",\"/transformed_pos/pose/pose/orientation/w\"],\n",
+    "                    [\"/odometry/filtered/pose/pose/orientation/yaw_deg\" ,\"/odometry/filtered/pose/pose/orientation/x\",\"/odometry/filtered/pose/pose/orientation/y\",\"/odometry/filtered/pose/pose/orientation/z\",\"/odometry/filtered/pose/pose/orientation/w\"]]\n",
+    "fig,ax = plt.subplots()\n",
+    "\n",
+    "selector = 0\n",
+    "color = iter(['#ff0000','#0000ff','#00ff00','#000000'])\n",
+    "\n",
+    "for selector in  range(3):\n",
+    "    c = next(color)\n",
+    "    xaxis = csv_dataframe[\"__time\"]\n",
+    "    xaxis = xaxis - xaxis[0]\n",
+    "\n",
+    "    #seperate quaternion data\n",
+    "    yaw =    csv_dataframe[selected_columns[selector][0]]\n",
+    "    quat_x = csv_dataframe[selected_columns[selector][1]]\n",
+    "    quat_y = csv_dataframe[selected_columns[selector][2]]\n",
+    "    quat_z = csv_dataframe[selected_columns[selector][3]]\n",
+    "    quat_w = csv_dataframe[selected_columns[selector][4]]\n",
+    "    \n",
+    "    #convert quaternion to euler\n",
+    "    new_yaw = []\n",
+    "    for i in range(len(yaw)):\n",
+    "        try:\n",
+    "            r = R.from_quat([quat_x[i],quat_y[i],quat_z[i],quat_w[i]])\n",
+    "            new_yaw.append(r.as_euler('xyz', degrees=True)[2])\n",
+    "        except:\n",
+    "            new_yaw.append(np.nan)\n",
+    "\n",
+    "    #plot\n",
+    "    print(sum(new_yaw))\n",
+    "    ax.plot(xaxis,new_yaw,'.-',markersize=1,c=c)\n",
+    "    ax.set(xlabel='t(s)', ylabel='yaw (°)', title='rotations yaw')\n",
+    "    ax.legend(['AMCL','Marvelmind','EKF', 'odometry_filtered'])\n",
+    "    ax.grid(True)\n",
+    "\n",
+    "plt.show()  "
    ]
   }
  ],
